<!--
  ~ Copyright (C) 2018 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="change_dessert">Change dessert</string>
    <string name="order_label_text">Order:</string>
    <string name="name_label_text">Name</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="address_label_text">Address</string>
    <string name="enter_address_hint">Enter address</string>
    <string name="enter_phone_hint">Enter phone</string>
    <string name="note_label_text">Note</string>
    <string name="enter_note_hint">Enter note</string>
    <string name="choose_delivery_method">Choose a delivery method:</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="pref_header_messages">Messages</string>
    <string name="pref_header_sync">Sync</string>
    <string name="pref_header_account">Account</string>
    <string name="pref_header_general">General</string>

    <!-- Messages Preferences -->
    <string name="pref_messages_title_signature">Your signature</string>
    <string name="pref_messages_title_reply">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="pref_sync_title_sync">Sync email periodically</string>
    <string name="pref_sync_title_attachment">Download incoming attachments</string>
    <string name="pref_sync_attachment_summary_on">
        Automatically download attachments for incoming emails
    </string>
    <string name="pref_sync_attachment_summary_off">
        Only download attachments when manually requested
    </string>

    <!-- Account -->
    <string name="pref_title_account">Market</string>
    <string-array name="pref_market_titles">
        <item>United States</item>
        <item>Canada</item>
        <item>United Kingdom</item>
        <item>India</item>
        <item>Japan</item>
        <item>Other</item>
    </string-array>
    <string-array name="pref_market_values">
        <item>US</item>
        <item>CA</item>
        <item>UK</item>
        <item>IN</item>
        <item>JA0</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_account_settings">Account settings</string>

    <!-- General Preferences -->
    <string name="pref_general_name_title">Name</string>
    <string name="pref_general_name_summary">Enter Your Complete Name</string>
    <string name="pref_general_name_dialog_title">Your Name</string>
    <string name="pref_general_name_dialog_message">Enter Your Complete Name</string>
    <string name="pref_general_email_title">Email Address</string>
    <string name="pref_general_email_summary">Enter Your Email Address</string>
    <string name="pref_general_email_dialog_title">Enter Your Email Address</string>
    <string name="pref_general_email_dialog_message">Enter Your Email Address</string>
    <string name="pref_general_delivery_title">Market</string>
    <string name="pref_general_delivery_dialog_title">Choose a delivery method</string>
    <string-array name="pref_delivery_titles">
        <item>Same day messenger service</item>
        <item>Next day ground delivery</item>
        <item>Pick up</item>
    </string-array>
    <string-array name="pref_delivery_values">
        <item>SD</item>
        <item>ND</item>
        <item>PU</item>
    </string-array>

</resources>
